# quantinue-doc

./: .gitignore  DESIGN.md  README.md  SESSION.md
app-v2/: .env.example  .gitignore  .gitleaks.toml  DESIGN.md  Dockerfile  IMPLEMENTATION_ASSUMPTIONS.md  compose.yaml  package-lock.json  package.json  pyproject.toml
app-v2/config/: news_trust_policy.yaml  pipeline.yaml
app-v2/db/: schema.sql
app-v2/db/migrations/: mvp2.sql
app-v2/docs/: DESIGN_IMPLEMENTATION_MAP.md  REAL_KEY_TESTING.md
app-v2/scripts/: run_observation.sh  scan_secrets.sh  test_compose_contract.sh  test_postgres_integration.sh
app-v2/src/quantinue/: __init__.py  main.py
app-v2/tests/: conftest.py  test_dashboard_detail.py  test_live_progress_dashboard.py  test_my_account.py  test_ops_log.py  test_pipeline.py  test_pipeline_dashboard.py  test_schedule_page.py  test_web.py
app-v2/tests/integration/: __init__.py  conftest.py  schema_sql_contract.py  schema_sql_expectations.py  test_active_accounts.py  test_active_run_snapshots.py  test_allocation_job.py  test_append_only_postgres.py  test_buy_candidate_reader.py  test_close_fill_accounting.py  test_daily_bar_ledger.py  test_daily_cap_excludes_closes.py  test_disclosure_raw_ledger.py  test_disclosure_signal_ledger.py  test_domain_lifecycle_pipeline.py  test_domain_lifecycle_postgres.py  test_exit_job.py  test_job_run_ledger.py  test_llm_usage_ledger.py  test_my_account_reconciliation.py  test_news_raw_ledger.py  test_open_position_reader.py  test_persistence_postgres.py  test_postgres_resume.py  test_provenance_postgres.py  test_schema_sql.py  test_screening_ranking.py  test_signal_narrative_ledger.py  test_simulated_account_stage08_postgres.py  test_simulated_portfolio_postgres.py  test_universe_snapshot.py  test_watch_sweep_ledger.py
app-v2/tests/real_key/: __init__.py  test_alpaca_real_key.py  test_openai_real_key.py
app-v2/tests/shell/: fake_uv.sh  test_run_observation.sh  test_run_observation_process_tree.sh
app-v2/tests/unit/: __init__.py  test_absent_disclosure_vote.py  test_account_fanout.py  test_active_run_snapshots.py  test_config.py  (+90 more)
(+302 files in other folders)
