[project]
name = "quantinue"
version = "0.1.0"
description = "Quantinue 01-11 paper-trading pipeline MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "httpx2[brotli,http2,zstd]>=2.5.0",
    "jinja2>=3.1.6",
    "pydantic>=2",
    "pydantic-ai>=2.9.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "sqlalchemy[asyncio]>=2",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantinue"]

[dependency-groups]
dev = [
    "anyio>=4.14.1",
    "basedpyright>=1.39.9",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.11"
pythonPlatform = "All"
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]
reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportUnannotatedClassAttribute = "none"
reportUnusedFunction = "none"
reportUnnecessaryComparison = "none"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "ISC001", "D203", "D213", "CPY001", "TD002", "TD003", "FIX002"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "PLR2004", "SLF001", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]
markers = [
    "real_key: opt-in test that contacts a real paid or stateful external provider",
]

[tool.coverage.run]
source = ["src"]
branch = true
